[gd_scene load_steps=11 format=3 uid="uid://cif3t0j5b2nlr"]

[ext_resource type="Script" path="res://scripts/trex.gd" id="1_2tvtu"]
[ext_resource type="Texture2D" uid="uid://32imdbxqpcfw" path="res://assets/Sprite Pack 2/4 - Percy/Running (32 x 32).png" id="1_vp1ut"]
[ext_resource type="Texture2D" uid="uid://ce6ajr7kiuqve" path="res://assets/Sprite Pack 2/4 - Percy/Shooting_Fireball (32 x 32).png" id="2_g413d"]
[ext_resource type="Texture2D" uid="uid://cn2o4wdxopdgn" path="res://assets/Sprite Pack 2/4 - Percy/Hurt (32 x 32).png" id="3_ign2t"]

[sub_resource type="Animation" id="Animation_3dy6i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_vp1ut")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_5wjug"]
resource_name = "hurt"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_ign2t")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_cc126"]
resource_name = "running"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_vp1ut")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 5]
}

[sub_resource type="Animation" id="Animation_tj0gt"]
resource_name = "shooting"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_g413d")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sn0qo"]
_data = {
"RESET": SubResource("Animation_3dy6i"),
"hurt": SubResource("Animation_5wjug"),
"running": SubResource("Animation_cc126"),
"shooting": SubResource("Animation_tj0gt")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v8c58"]
size = Vector2(14, 15)

[node name="trex" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_2tvtu")

[node name="sprite" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("1_vp1ut")
hframes = 6

[node name="animation_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sn0qo")
}
autoplay = "running"

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(2, -7.5)
shape = SubResource("RectangleShape2D_v8c58")

[node name="spawn_fireball_point" type="Marker2D" parent="."]

[node name="ground_detector" type="RayCast2D" parent="."]
target_position = Vector2(0, 8)
collision_mask = 2

[node name="player_detector" type="RayCast2D" parent="."]
position = Vector2(0, -8)
target_position = Vector2(50, 0)
